--- a/PNC/units.html
+++ b/PNC/units.html
@@ -48,8 +48,8 @@
                         <div>Bonus</div>
                         <label><input type="checkbox" value="PotB" />Potential Breakthrough</label>
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
-                        <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
-                        <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
+                        <label><input type="checkbox" value="Bond" style="display: none;" disabled/>Intimacy</label>
+                        <label><input type="checkbox" value="Spec" style="display: none;" disabled/>Specialty Training</label>
                         <!-- No Algorithm (yet) -->
                         <!-- Fairies -->
                     </div>
@@ -162,6 +162,10 @@
     },
     {
         "name" : "Persicaria - Shining Edge",
+        "reference" : {"" : ""}
+    },
+    {
+        "name" : "Hubble - Death Star",
         "reference" : {"" : ""}
     },
 ] -->
