--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -39,6 +39,12 @@
 
         <div class="container">
             <section id="main_content">
+                <section id="main_content">
+                <details>
+                    <summary>September 20, 2023</summary>
+                    Updated IDs 00249, 00009, 00265.<br>
+                    Changed ID 00187.
+                </details>
                 <details>
                     <summary>September 13, 2023</summary>
                     Added IDs 00462, 00463, 00464.<br>
