--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,7 +40,13 @@
         <div class="container">
             <section id="main_content">
                 <section id="main_content">
-                <details>
+                    <details>
+                        <summary>September 28, 2023</summary>
+                        Added ID 00464.<br>
+                        Updated ID 00463.<br>
+                        Updated the starter page.
+                    </details>
+                    <details>
                     <summary>September 20, 2023</summary>
                     Updated IDs 00249, 00009, 00265.<br>
                     Changed ID 00187.
