--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -127,10 +127,10 @@
                 </table>
 
                 <a href="#phasing" id="phasing"><h1>I heard they made new games of the same series. Is GFL1 going to be phased out?</h1></a>
-                <p>Not anytime soon considering that 3.0 client (which is a big investment just to shutdown in a year) is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+                <p>Not anytime soon considering that they're still adding mechanics in its 7th year and there are more stories to tell. The plan is for all games to be played simultaneously.</p>
 
-                <!-- Replace with timeline image -->
-                <table>
+                <img src="./assets/images/Timeline.png" alt="" loading="lazy">
+                <!--table>
                     <thead>
                         <tr>
                             <th>Game</th>
@@ -155,7 +155,7 @@
                             <td>2060</td>
                         </tr>
                     </tbody>
-                </table>
+                </table-->
 
                 <!-- How is the gameplay loop like? -->
 
