--- a/univasset/scripts/pageheader/header.html
+++ b/univasset/scripts/pageheader/header.html
@@ -10,8 +10,7 @@
         <section id="downloads">
             <a href="/GFL" class="btn btn-gfl"><span class="icon"></span>Girls' Frontline</a>
             <a href="/PNC" class="btn btn-pnc"><span class="icon"></span>Neural Cloud</a>
-            <!--a href="/EXI" class="btn btn-exi"><span class="icon"></span>Exilium</a-->
-            <!-- Menu Buttons -->
+            <a href="/EXI" class="btn btn-exi"><span class="icon"></span>Exilium</a>
         </section>
     </div>
 </header>
