--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -44,7 +44,8 @@
                         <summary>September 28, 2023</summary>
                         Added ID 00464.<br>
                         Updated ID 00463.<br>
-                        Updated the starter page.
+                        Updated the starter page.<br>
+                        Moved GFL-RC verse collection to the Compilation page.
                     </details>
                     <details>
                     <summary>September 20, 2023</summary>
