--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -14,6 +14,10 @@
             gdocDropdown(document.querySelector("#speqs"),
                 ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
             )
+
+            gdocDropdown(document.querySelector("#asset"),
+                ["GFL-RC verse collection", "https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2"]
+            )
         </script>
 
         <meta charset='utf-8'>
@@ -47,9 +51,14 @@
                 </details>
                 <br>
                 <details>
-                    <summary>SPEQs sheet. Created by u/corbsieboy.</summary>
+                    <summary>SPEQs sheet. Created and maintained by u/corbsieboy.</summary>
                     <div id="speqs"></div>
-                </details>                
+                </details>
+                <br>
+                <details>
+                    <summary>Girls' Frontline/Reverse Collapse Asset/Lore Collection.</summary>
+                    <div id="asset"></div>
+                </details>
             </section>
         </div>
     </body>
