--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -16,7 +16,7 @@
             )
 
             gdocDropdown(document.querySelector("#asset"),
-                ["GFL-RC verse collection", "https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2"]
+                ["GFL-RC verse collection", "https://docs.google.com/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2"] // https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2
             )
         </script>
 
