--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,14 +40,19 @@
         <div class="container">
             <section id="main_content">
                 <section id="main_content">
-                    <details>
-                        <summary>September 28, 2023</summary>
-                        Added ID 00464.<br>
-                        Updated ID 00463.<br>
-                        Updated the starter page.<br>
-                        Moved GFL-RC verse collection to the Compilation page.
-                    </details>
-                    <details>
+                <details>
+                    <summary>October 04, 2023</summary>
+                    Added ID 00465.<br>
+                    Updated IDs 00029, 00128.
+                </details>
+                <details>
+                    <summary>September 28, 2023</summary>
+                    Added ID 00464.<br>
+                    Updated ID 00463.<br>
+                    Updated the starter page.<br>
+                    Moved GFL-RC verse collection to the Compilation page.
+                </details>
+                <details>
                     <summary>September 20, 2023</summary>
                     Updated IDs 00249, 00009, 00265.<br>
                     Changed ID 00187.
