--- a/GFL/index.html
+++ b/GFL/index.html
@@ -33,7 +33,7 @@
                     <a href="./faqs">Frequently Asked Questions</a>
                     <a href="./starter">New Player Guide</a>
                     <a href="./returner">Returning Player Guide</a>
-                    <a href="./docs" class="tooltip">Compilations<span class="tooltiptext">Skins, MODs, Furnitures, SPEQs</span></a>
+                    <span><a href="./docs" class="tooltip">Compilations</a><span class="tooltiptext">Skins, MODs, Furnitures, SPEQs</span></span>
                     <a href="./mainpage">Topics Repository</a>
                     <!--a href="./calc">Calculators</a-->
                     <a href="./changelog">Change Logs</a>
