--- a/PNC/units.html
+++ b/PNC/units.html
@@ -2,12 +2,15 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
-        <script type="module" src="./units.js"></script>
+        <!--script type="module" src="./units.js"></script-->
+        <script type="module" src="./units.ts"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./units.css">
+        <link rel="stylesheet" href="./stats.css">
+        <link rel="stylesheet" href="./algorithms.css">
         
         <!-- Setup theme-color -->
 
@@ -48,9 +51,9 @@
                         <div>Bonus</div>
                         <label><input type="checkbox" value="PotB" />Potential Breakthrough</label>
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
-                        <label><input type="checkbox" value="Bond" style="display: none;" disabled/>Intimacy</label>
-                        <label><input type="checkbox" value="Spec" style="display: none;" disabled/>Specialty Training</label>
-                        <!-- No Algorithm (yet) -->
+                        <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
+                        <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
+                        <label><input type="checkbox" value="Algo" disabled/>Algorithm</label>
                         <!-- Fairies -->
                     </div>
                     <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
@@ -72,15 +75,15 @@
                     <label><input type="radio" name="algorithms" value="Special" /><h2>Special</h2></label>        
                 </div>
                 <div id="Offense" class="tab-body">
-                    <span>Offense</span>
+                    <div>Offense</div>
                     <div class="algo-grid"></div>
                 </div>
                 <div id="Stability" class="tab-body">
-                    <span>Stability</span>
+                    <div>Stability</div>
                     <div class="algo-grid"></div>
                 </div>
                 <div id="Special" class="tab-body">
-                    <span>Special</span>
+                    <div>Special</div>
                     <div class="algo-grid"></div>
                 </div>
                 <button type="button">Close</button>
