--- a/PNC/units.html
+++ b/PNC/units.html
@@ -2,8 +2,7 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
-        <!--script type="module" src="./units.js"></script-->
-        <script type="module" src="./units.ts"></script>
+        <script type="module" src="./units.js"></script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
