--- a/PNC/units.html
+++ b/PNC/units.html
@@ -3,6 +3,7 @@
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
         <script type="module" src="./units.js"></script>
+        <!-- Typescript files unusable in github. -->
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
