--- a/PNC/units.html
+++ b/PNC/units.html
@@ -60,8 +60,7 @@
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
-                <div id="data" class="tab-body">
-                    <div class="table"></div>
+                <div id="data" class="tab-body table">
                 </div>
             </section>
         </div>
