--- a/GFL/docs.html
+++ b/GFL/docs.html
@@ -14,10 +14,6 @@
             gdocDropdown(document.querySelector("#speqs"),
                 ["Log-In SPEQs", "https://docs.google.com/spreadsheets/d/1tRS7c6zTcXiJHamnqHw-eWgZd2Ov0BCj"],
             )
-
-            gdocDropdown(document.querySelector("#asset"),
-                ["GFL-RC verse collection", "https://docs.google.com/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2"] // https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2
-            )
         </script>
 
         <meta charset='utf-8'>
@@ -45,6 +41,8 @@
 
         <div class="container">
             <section id="main_content">
+                <a href="https://drive.google.com/drive/folders/1q5IMbZhCOEfdcLxjL5YbR11kzW8PRgw2">GFL-RC verse collection</a>
+                <br>
                 <details>
                     <summary>Skins/Furnitures/MODs. Created by u/ConductorBichir. Maintained by u/UnironicWeeaboo.</summary>
                     <div id="skins"></div>
@@ -53,11 +51,6 @@
                 <details>
                     <summary>SPEQs sheet. Created and maintained by u/corbsieboy.</summary>
                     <div id="speqs"></div>
-                </details>
-                <br>
-                <details>
-                    <summary>Girls' Frontline/Reverse Collapse Asset/Lore Collection.</summary>
-                    <div id="asset"></div>
                 </details>
             </section>
         </div>
