--- a/PNC/units.html
+++ b/PNC/units.html
@@ -66,27 +66,20 @@
         </div>
 
         <dialog id="algo-modal">
-            <div>
-                <span></span>
-                <div class="tab-button">
-                    <label><input type="radio" name="algorithms" value="Offense" checked/><h2>Offense</h2></label>
-                    <label><input type="radio" name="algorithms" value="Stability" /><h2>Stability</h2></label>        
-                    <label><input type="radio" name="algorithms" value="Special" /><h2>Special</h2></label>        
-                </div>
-                <div id="Offense" class="tab-body">
-                    <div>Offense</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Stability" class="tab-body">
-                    <div>Stability</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Special" class="tab-body">
-                    <div>Special</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <button type="button">Close</button>
+            <div></div>
+            <div id="Offense">
+                <div>Offense</div>
+                <div class="algo-grid"></div>
             </div>
+            <div id="Stability">
+                <div>Stability</div>
+                <div class="algo-grid"></div>
+            </div>
+            <div id="Special">
+                <div>Special</div>
+                <div class="algo-grid"></div>
+            </div>
+            <button type="button">Close</button>
         </dialog>
     </body>
 </html>
