--- a/PNC/units.html
+++ b/PNC/units.html
@@ -81,6 +81,11 @@
             </div>
             <button type="button">Close</button>
         </dialog>
+
+        <dialog id="alg0-select">
+            <div></div>
+            <button type="button">Close</button>
+        </dialog>
     </body>
 </html>
 
