--- a/PNC/units.html
+++ b/PNC/units.html
@@ -82,7 +82,7 @@
             <button type="button">Close</button>
         </dialog>
 
-        <dialog id="alg0-select">
+        <dialog id="algo-select">
             <div></div>
             <button type="button">Close</button>
         </dialog>
