--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -39,7 +39,11 @@
 
         <div class="container">
             <section id="main_content">
-                <section id="main_content">
+                <details>
+                    <summary>October 10, 2023</summary>
+                    Added IDs 00466, 00467.<br>
+                    Updated ID 00450.
+                </details>
                 <details>
                     <summary>October 04, 2023</summary>
                     Added ID 00465.<br>
