--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         <div class="container">
             <section id="main_content">
+                <p>Created and maintained by u/BOOM_all_pass. For comments, suggestions, or violent reactions, ping this user in the respectives guide's subreddit.</p>
             </section>
         </div>
     </body>
