--- a/PNC/units.html
+++ b/PNC/units.html
@@ -67,17 +67,19 @@
 
         <dialog id="algo-modal">
             <div></div>
-            <div id="Offense">
-                <div>Offense</div>
-                <div class="algo-grid"></div>
-            </div>
-            <div id="Stability">
-                <div>Stability</div>
-                <div class="algo-grid"></div>
-            </div>
-            <div id="Special">
-                <div>Special</div>
-                <div class="algo-grid"></div>
+            <div>
+                <div id="Offense">
+                    <div>Offense</div>
+                    <div class="algo-grid"></div>
+                </div>
+                <div id="Stability">
+                    <div>Stability</div>
+                    <div class="algo-grid"></div>
+                </div>
+                <div id="Special">
+                    <div>Special</div>
+                    <div class="algo-grid"></div>
+                </div>    
             </div>
             <button type="button">Close</button>
         </dialog>
