--- a/PNC/units.html
+++ b/PNC/units.html
@@ -56,7 +56,7 @@
                         <label><input type="checkbox" value="Algo" disabled/>Algorithm</label>
                         <!-- Fairies -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. --></p>
+                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30.<!-- Intimacy at Lv.15. Specialty at Lv.???. Algorithms at Gold rarity. --></p>
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
@@ -67,26 +67,23 @@
 
         <dialog id="algo-modal">
             <div></div>
-            <div>
-                <div id="Offense">
-                    <div>Offense</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Stability">
-                    <div>Stability</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Special">
-                    <div>Special</div>
-                    <div class="algo-grid"></div>
-                </div>    
+            <div id="Offense">
+                <div>Offense</div>
+                <div class="algo-grid"></div>
             </div>
+            <div id="Stability">
+                <div>Stability</div>
+                <div class="algo-grid"></div>
+            </div>
+            <div id="Special">
+                <div>Special</div>
+                <div class="algo-grid"></div>
+            </div>    
             <button type="button">Close</button>
         </dialog>
 
         <dialog id="algo-select">
-            <div></div>
-            <button type="button">Close</button>
+            <form method="dialog"></form>
         </dialog>
     </body>
 </html>
