--- a/PNC/units.html
+++ b/PNC/units.html
@@ -60,13 +60,13 @@
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
-                <div id="data" class="tab-body table">
-                </div>
+                <div id="data" class="tab-body table"></div>
             </section>
         </div>
 
         <dialog id="algo-modal">
             <div></div>
+
             <div>
                 <div id="Offense">
                     <div>Offense</div>
@@ -81,7 +81,8 @@
                     <div class="algo-grid"></div>
                 </div>
             </div>
-            <div><button type="button" id="algo-close">Close</button></div>
+
+            <div><button type="button" id="close-modal">Close</button></div>
         </dialog>
 
         <dialog id="algo-select">
