--- a/PNC/units.html
+++ b/PNC/units.html
@@ -68,15 +68,21 @@
             <div></div>
 
             <div>
-                <div id="Offense">
+                <div class="tab-button">
+                    <label><input type="radio" name="tables" value="Offense" checked/><h2>Offense</h2></label>
+                    <label><input type="radio" name="tables" value="Stability" /><h2>Stability</h2></label>
+                    <label><input type="radio" name="tables" value="Special" /><h2>Special</h2></label>
+                </div>
+
+                <div id="Offense" class="tab-body">
                     <div>Offense</div>
                     <div class="algo-grid"></div>
                 </div>
-                <div id="Stability">
+                <div id="Stability" class="tab-body">
                     <div>Stability</div>
                     <div class="algo-grid"></div>
                 </div>
-                <div id="Special">
+                <div id="Special" class="tab-body">
                     <div>Special</div>
                     <div class="algo-grid"></div>
                 </div>
