--- a/PNC/units.html
+++ b/PNC/units.html
@@ -67,25 +67,16 @@
         <dialog id="algo-modal">
             <div></div>
 
-            <div>
+            <div id="algo-field">
                 <div class="tab-button">
                     <label><input type="radio" name="tables" value="Offense" checked/><h2>Offense</h2></label>
                     <label><input type="radio" name="tables" value="Stability" /><h2>Stability</h2></label>
                     <label><input type="radio" name="tables" value="Special" /><h2>Special</h2></label>
                 </div>
 
-                <div id="Offense" class="tab-body">
-                    <div>Offense</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Stability" class="tab-body">
-                    <div>Stability</div>
-                    <div class="algo-grid"></div>
-                </div>
-                <div id="Special" class="tab-body">
-                    <div>Special</div>
-                    <div class="algo-grid"></div>
-                </div>
+                <div id="Offense" class="tab-body"></div>
+                <div id="Stability" class="tab-body"></div>
+                <div id="Special" class="tab-body"></div>
             </div>
 
             <div><button type="button" id="close-modal">Close</button></div>
