--- a/PNC/units.html
+++ b/PNC/units.html
@@ -69,9 +69,9 @@
 
             <div id="algo-field">
                 <div class="tab-button">
-                    <label><input type="radio" name="tables" value="Offense" checked/><h2>Offense</h2></label>
-                    <label><input type="radio" name="tables" value="Stability" /><h2>Stability</h2></label>
-                    <label><input type="radio" name="tables" value="Special" /><h2>Special</h2></label>
+                    <label><input type="radio" name="algorithm" value="Offense" checked/><h2>Offense</h2></label>
+                    <label><input type="radio" name="algorithm" value="Stability" /><h2>Stability</h2></label>
+                    <label><input type="radio" name="algorithm" value="Special" /><h2>Special</h2></label>
                 </div>
 
                 <div id="Offense" class="tab-body"></div>
