--- a/PNC/units.html
+++ b/PNC/units.html
@@ -74,9 +74,15 @@
                     <label><input type="radio" name="algorithm" value="Special" /><h2>Special</h2></label>
                 </div>
 
-                <div id="Offense" class="tab-body"></div>
-                <div id="Stability" class="tab-body"></div>
-                <div id="Special" class="tab-body"></div>
+                <div id="Offense" class="tab-body">
+                    <div></div>
+                </div>
+                <div id="Stability" class="tab-body">
+                    <div></div>
+                </div>
+                <div id="Special" class="tab-body">
+                    <div></div>
+                </div>
             </div>
 
             <div><button type="button" id="close-modal">Close</button></div>
