--- a/PNC/units.html
+++ b/PNC/units.html
@@ -167,4 +167,8 @@
         "name" : "Hubble - Death Star",
         "reference" : {"" : ""}
     },
+    {
+        "name" : "Kimie",
+        "reference" : {"" : ""}
+    },
 ] -->
