--- a/PNC/index.html
+++ b/PNC/index.html
@@ -44,7 +44,7 @@
                 <div id="links">
                     <a href="./units">Unit Stats</a>
                     <a href="./googledocs">Guides</a>
-                    <span><a href="https://neuralen.modoo.at/" class="tooltip">NC Skin info</a><span class="tooltiptext">Managed by Pineapple</span></span>
+                    <a href="https://neuralen.modoo.at/" class="tooltip">NC Skin info<span class="tooltiptext">Managed by Pineapple</span></a>
                 </div>
             </section>
         </div>
