--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,10 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>October 18, 2023</summary>
+                    Added ID 00468.
+                </details>
+                <details>
                     <summary>October 10, 2023</summary>
                     Added IDs 00466, 00467.<br>
                     Updated ID 00450.
