--- a/GFL/returner.html
+++ b/GFL/returner.html
@@ -36,6 +36,12 @@
             <section id="main_content">
                 <a href="#account" id="account"><h1>I'm returning after a long break. Should I create a new account or use my old one?</h1></a>
                 <p>Just use your old one. Any and all starter benefits are also given to older players.</p>
+
+                <a href="#guide" id="guide"><h1>Any guide thread I could read to refresh my memory?</h1></a>
+                <dl>
+                    <dt>Gamepress</dt>
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>
+                </dl>
             </section>
         </div>
     </body>
