--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -162,7 +162,7 @@
                 <a href="#guide" id="guide"><h1>Any guide thread I should read before starting out?</h1></a>
                 <dl>
                     <dt>Gamepress</dt>
-                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>   <!-- Might leave this one only. -->
+                    <dd><a href="https://gamepress.gg/girlsfrontline/new-player-hub-how-girls-frontline">New Player Hub: How to Girls' Frontline</a></dd>
 
                     <dt>GFL Corner</dt>
                     <dd><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></dd>
