--- a/PNC/units.html
+++ b/PNC/units.html
@@ -50,13 +50,13 @@
                     <div id="bonus">
                         <div>Bonus</div>
                         <label><input type="checkbox" value="PotB" />Potential Breakthrough</label>
+                        <label><input type="checkbox" value="Spec" />Specialty Training</label>
                         <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
-                        <label><input type="checkbox" value="Spec" disabled/>Specialty Training</label>
                         <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
                         <label><input type="checkbox" value="Algo" />Algorithm</label>
                         <!-- Fairies -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Arma stats at Lv.30. Algorithms at Gold rarity and Efficiency at 2x.<!-- Intimacy at Lv.15. Specialty at Lv.???.  --></p>
+                    <p>All units at Lv.70 and 5★. Specialty at max level <!-- Lv.??? -->. Arma stats at Lv.30. Algorithms at Gold rarity and Efficiency at 2x.Intimacy at Lv.15. <!-- Intimacy at Lv15 --></p>
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
