--- a/PNC/units.html
+++ b/PNC/units.html
@@ -49,14 +49,13 @@
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
-                        <label><input type="checkbox" value="PotB" />Potential Breakthrough</label>
-                        <label><input type="checkbox" value="Spec" />Specialty Training</label>
-                        <label><input type="checkbox" value="Bond" disabled/>Intimacy</label>
-                        <label><input type="checkbox" value="Arma" />Arma Inscripta</label>
-                        <label><input type="checkbox" value="Algo" />Algorithm</label>
+                        <label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough<span class="tooltiptext">All units at Lv.70 and 5★.</span></label>
+                        <label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training<span class="tooltiptext">Specialty at max level <!-- Lv.??? -->.</span></label>
+                        <label class="tooltip"><input type="checkbox" value="Bond" disabled/>Intimacy<span class="tooltiptext">Intimacy at Lv.15.</span></label>
+                        <label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta<span class="tooltiptext">Arma stats at Lv.30.</span></label>
+                        <label class="tooltip"><input type="checkbox" value="Algo" />Algorithm<span class="tooltiptext">Algorithms at Gold rarity and Efficiency at 2x.</span></label>
                         <!-- Fairies -->
                     </div>
-                    <p>All units at Lv.70 and 5★. Specialty at max level <!-- Lv.??? -->. Arma stats at Lv.30. Algorithms at Gold rarity and Efficiency at 2x.<!-- Intimacy at Lv.15. --></p>
                     <p>Data taken from <a href="http://wiki.42lab.cloud/w/%E5%BF%83%E6%99%BA%E4%BA%BA%E5%BD%A2%E5%9B%BE%E9%89%B4">42 wiki</a>.</p>
                 </div>
 
