--- a/PNC/units.html
+++ b/PNC/units.html
@@ -49,7 +49,7 @@
                     </div>
                     <div id="bonus">
                         <div>Bonus</div>
-                        <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">All units at Lv.70 and 5★.</span></span>
+                        <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
                         <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
                         <span><label class="tooltip"><input type="checkbox" value="Bond" disabled/>Intimacy</label>         <span class="tooltiptext">Intimacy at Lv.15.</span></span>
                         <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
@@ -85,6 +85,8 @@
         <dialog id="algo-select">
             <form method="dialog"></form>
         </dialog>
+
+        <!-- <div></div> -->
     </body>
 </html>
 
