--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -40,6 +40,11 @@
         <div class="container">
             <section id="main_content">
                 <details>
+                    <summary>October 25, 2023</summary>
+                    Added ID 00469, 00470.<br>
+                    Updated ID 00185.
+                </details>
+                <details>
                     <summary>October 18, 2023</summary>
                     Added ID 00468.
                 </details>
