--- a/PNC/googledocs.html
+++ b/PNC/googledocs.html
@@ -8,7 +8,6 @@
             gdocDropdown(document.querySelector("#main_content div"),
                 ["Project Neural Cloud Character Usage Tips (by Jurisdiction)", "https://docs.google.com/document/d/1IJAFKL61Lyxa9a1oXt0ACb7dKTa7819dtzWViS6RqBI"],
                 ["Character Attribute Values and In Game Formulas", "https://docs.google.com/document/d/1HHEBOWzqvyPCggI2SasIA0vYQtCh-dOXgsW2o7n74r0"],
-                // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
                 ["Lizzy Amaranth's Matrix Guide (LAM Guide)", "https://docs.google.com/spreadsheets/d/1wlKPot-Gi1MM6OGAO7ivzSiA8Tdq081OqCqeL2E6DU8"],
                 ['Project Neural Cloud EN Tier List', 'https://docs.google.com/spreadsheets/d/1oNBX0zZdaNsGYwxA6cxvh58X6nvUSlcaKf9lTmjF6Yg'],
                 ['PNC Algo Mainstat Viability List', 'https://docs.google.com/spreadsheets/d/1DSK4d94RdRCV_ji7NXC0Klyf7v_dUkIY9n9qW9y2UeQ'],
@@ -19,10 +18,12 @@
                 ["Neural Cloud Gifts", "https://docs.google.com/spreadsheets/d/1vohWGNxRO0kXSBxAGlVBezleV2YgxnCHY2yE_4scdTc"],
                 ["Less Intensive LUG", "https://docs.google.com/spreadsheets/d/1iqwy_37pHdbbxrM6rcCqcgTz174sRO4OZ_VvHPwgiwM"],
                 ["Lozzy Tier List", "https://docs.google.com/spreadsheets/d/1e_fEucLAZj8zi8ohELL2G2Q4ddZ_vvmGJqH87jQ2pwM"],
+                ["PNC Calculator", "https://docs.google.com/spreadsheets/d/1_b9E22dIP526Axn4rUSBfLBKvQj7K1jB7iMfSiQBOdI"],
                 ["L.U.S.T. 2", "https://docs.google.com/spreadsheets/d/1FMK713okcJNQuCv625Ut0TZuQbm9RlHk7l1yOUF9Qdw"],
                 ['Algorithms', 'https://docs.google.com/spreadsheets/d/1eNVCADDvoelcOFeag4BxIouw1Na8KwxZjRD_rbBJdEU'],
             )
-        </script>
+            // ["iana's Unit Rating & Teambuilding Spreadsheet", 'https://docs.google.com/spreadsheets/d/1ugEerWZZcjcXyF7ZlYOUPISbnarrg2DCqRyHxpYsH4o'],
+            </script>
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
