--- a/GFL/changelog.html
+++ b/GFL/changelog.html
@@ -39,7 +39,10 @@
 
         <div class="container">
             <section id="main_content">
-                
+                <details>
+                    <summary>November 01, 2023</summary>
+                    Added IDs 00471, 00472, 00473, 00474.
+                </details>                
                 <details>
                     <summary>October 25, 2023</summary>
                     Added ID 00469, 00470.<br>
