--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -44,10 +44,14 @@
                 <div id="bonus">
                     <div>Bonus</div>
                     <span><label class="tooltip"><input type="checkbox" value="PotB" />Potential Breakthrough</label>   <span class="tooltiptext">Units at Lv.70 and 5★.</span></span>
-                    <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Bond" disabled/>Intimacy</label>         <span class="tooltiptext">Intimacy at Lv.15.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Arma" />Arma Inscripta</label>           <span class="tooltiptext">Arma stats at Lv.30.</span></span>
                     <span><label class="tooltip"><input type="checkbox" value="Algo" />Algorithm</label>                <span class="tooltiptext">Algorithms at Gold rarity and Efficiency at 2x.</span></span>
+
+                    <span><label class="tooltip"><input type="checkbox" value="Spec" />Specialty Training</label>       <span class="tooltiptext">Specialty at max level<!-- Lv.??? -->.</span></span>
+
+                    <!-- Functions -->
+                    <!-- Protocols -->
                     <!-- Fairies -->
                 </div>
                 <p>Click on the unit's name to open the algorithm window.</p>
