--- a/PNC/index.html
+++ b/PNC/index.html
@@ -42,7 +42,8 @@
         <div class="container">
             <section id="main_content">
                 <div id="links">
-                    <a href="./units">Unit Stats</a>
+                    <a href="./unitstats">Unit Stats</a>
+                    <a href="./unitdata">Unit Data</a>
                     <a href="./googledocs">Guides</a>
                     <a href="https://neuralen.modoo.at/" class="tooltip">NC Skin info<span class="tooltiptext">Managed by Pineapple</span></a>
                 </div>
