--- a/PNC/unitskills.html
+++ b/PNC/unitskills.html
@@ -24,10 +24,20 @@
     </head>
 
     <body>
-        <include src="/univasset/scripts/pageheader/header.html" 0="Useful for memebuiliding and theorycrafting"></include>
+        <include src="/univasset/scripts/pageheader/header.html" 0="Questionable use on memebuiliding and theorycrafting"></include>
 
         <div class="container">
             <section id="main_content">
+                <dl>
+                    <dt>Dushevnaya</dt>
+                    <dd>Normal Attack is turned into a 2-tile radius Special Normal Attack.</dd>
+                    <dd>Active expands the Special Normal Attack to the whole field.</dd>
+                    <dd>Buff/Debuff applies after each Special Normal Attack hit.</dd>
+                </dl>
+
+                <ul>
+                    <li>Special Normal Attack - Can only critically strike through function sets and Bloodthirst Sigils.</li>
+                </ul>
             </section>
         </div>
     </body>
