--- a/PNC/unitstats/index.html
+++ b/PNC/unitstats/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <script type="module" src="/univasset/scripts/include.js"></script>
-        <script type="module" src="./units.js"></script>
+        <script type="module" src="./index.js"></script>
         <!-- Typescript files unusable in github. -->
 
         <meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./units.css">
+        <link rel="stylesheet" href="./index.css">
         <link rel="stylesheet" href="./stats.css">
         <link rel="stylesheet" href="./algorithms.css">
         
