--- a/PNC/faqs/index.html
+++ b/PNC/faqs/index.html
@@ -38,16 +38,15 @@
 
                 <div id="Keywords" class="tab-body">
                     <form>
-                        <input type="text" placeholder="Search..." name="search">
+                        <input type="text" placeholder="Separate keywords with whitespace" name="search">
                         <input type="submit">
                     </form>
                 </div>
 
                 <div id="Tags" class="tab-body">
                     <form>
-                        <div id="tags-list"></div>
-    
-                        <input type="text" id="search-text" placeholder="Search..." name="search">
+                        <div></div>
+                        <input type="text" name="tags" style="display: none;">                        
                         <input type="submit">
                     </form>
                 </div>
